--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="bg">
         <h1>Hi, I am edito</h1>
         <p>A Coder and Visvual artist.</p>
-        <video preload="none" autoplay loop src="/video/editomotion(1).mp4"></video>
+        <video preload="none" autoplay loop src="video/editomotion(1).mp4"></video>
       </div>
         
     </header>
