--- a/photo.html
+++ b/photo.html
@@ -53,74 +53,74 @@
     <section class="main1">
       <div class="gallery">
         <div class="gallery-item">
-          <img src="/img/shivammmmm.jpg" alt="" />
-          <a class="download" href="/img/shivammmmm.jpg" download>Download</a>
+          <img src="img/shivammmmm.jpg" alt="" />
+          <a class="download" href="img/shivammmmm.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/sdashiv.jpg" alt="" />
-          <a class="download" href="/img/sdashiv.jpg" download>Download</a>
+          <img src="img/sdashiv.jpg" alt="" />
+          <a class="download" href="img/sdashiv.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/shinchan.jpg" alt="" />
-          <a class="download" href="/img/shinchan.jpg" download>Download</a>
+          <img src="img/shinchan.jpg" alt="" />
+          <a class="download" href="img/shinchan.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/3dedito.jpg" alt="" />
-          <a class="download" href="/img/3dedito.jpg" download>Download</a>
+          <img src="img/3dedito.jpg" alt="" />
+          <a class="download" href="img/3dedito.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/Untitled-1.jpg" alt="" />
-          <a class="download" href="/img/Untitled-1.jpg" download>Download</a>
+          <img src="img/Untitled-1.jpg" alt="" />
+          <a class="download" href="img/Untitled-1.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/Untitled-2.jpg" alt="" />
-          <a class="download" href="/img/Untitled-2.jpg" download>Download</a>
+          <img src="img/Untitled-2.jpg" alt="" />
+          <a class="download" href="img/Untitled-2.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/maa.jpg" alt="" />
-          <a class="download" href="/img/maa.jpg" download>Download</a>
+          <img src="img/maa.jpg" alt="" />
+          <a class="download" href="img/maa.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/matarani2.jpg" alt="" />
-          <a class="download" href="/img/matarani2.jpg" download>Download</a>
+          <img src="img/matarani2.jpg" alt="" />
+          <a class="download" href="img/matarani2.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/avtar.jpg" alt="" />
-          <a class="download" href="/img/avtar.jpg" download>Download</a>
+          <img src="img/avtar.jpg" alt="" />
+          <a class="download" href="img/avtar.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/Matarani.jpg" alt="" />
-          <a class="download" href="/img/Matarani.jpg" download>Download</a>
+          <img src="img/Matarani.jpg" alt="" />
+          <a class="download" href="img/Matarani.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/THEHANUMANJI.jpg" alt="" />
-          <a class="download" href="/img/THEHANUMANJI.jpg" download>Download</a>
+          <img src="img/THEHANUMANJI.jpg" alt="" />
+          <a class="download" href="img/THEHANUMANJI.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/bull.jpg" alt="" />
-          <a class="download" href="/img/bull.jpg" download>Download</a>
+          <img src="img/bull.jpg" alt="" />
+          <a class="download" href="img/bull.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/tree-164915.jpg" alt="" />
-          <a class="download" href="/img/tree-164915.jpg" download>Download</a>
+          <img src="img/tree-164915.jpg" alt="" />
+          <a class="download" href="img/tree-164915.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/SHIVV.jpg" alt="" />
-          <a class="download" href="/img/SHIVV.jpg" download>Download</a>
+          <img src="img/SHIVV.jpg" alt="" />
+          <a class="download" href="img/SHIVV.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/vitiligoqueen.jpg" alt="" />
-          <a class="download" href="/img/vitiligoqueen.jpg" download>Download</a>
+          <img src="img/vitiligoqueen.jpg" alt="" />
+          <a class="download" href="img/vitiligoqueen.jpg" download>Download</a>
         </div>
         <div class="gallery-item">
-          <img src="/img/hanumanjitextjaishriram.jpg" alt="" />
-          <a class="download" href="/img/hanumanjitextjaishriram.jpg" download
+          <img src="img/hanumanjitextjaishriram.jpg" alt="" />
+          <a class="download" href="img/hanumanjitextjaishriram.jpg" download
             >Download</a
           >
         </div>
         <div class="gallery-item">
-          <img src="/img/Untitl.jpg" alt="" />
-          <a class="download" href="/img/Untitl.jpg" download>Download</a>
+          <img src="img/Untitl.jpg" alt="" />
+          <a class="download" href="img/Untitl.jpg" download>Download</a>
         </div>
         
       </div>
