--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
           <li class="item"><a href="#about">ABOUT</a></li>
           <li class="item"><a href="#contact">CONTACT US</a></li>
           <li class="item"><a href="#more">MORE</a></li>
-          <div class="nav-input">
+          <div class="nav-input"> 
             <input type="text" placeholder="Search" />
             <i class="fas fa-search"></i>
           </div>
-        </ul>
+        </ul> 
         <div class="burger">
           <div class="line1"></div>
           <div class="line2"></div>
@@ -51,11 +51,11 @@
 
       <div class="bg">
         <h1>Hi, I am edito</h1>
-        <p>A Coder and Visvual artist.</p>
+        <p>A Coder and Digital artist.</p>
         <video preload="none" autoplay loop src="video/editomotion(1).mp4"></video>
       </div>
         
-    </header>
+    </header> 
 
     <section class="main1">
 
