--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     </section>
   
-   
+     <footer class="footer">Copyright &copy; edito</footer>  
 
     <script src="app.js"></script>
   </body>
