--- a/photo.html
+++ b/photo.html
@@ -55,174 +55,173 @@
     <div class="gallery">
 
       <div class="gallery-item">
-        <img src="/img/shivammmmm.jpg" alt="" />
-
+        <img src="img/shivammmmm.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/shivammmmm.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/shivammmmm.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/sdashiv.jpg" alt="" />
+        <img src="img/sdashiv.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/sdashiv.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/sdashiv.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/matarani2.jpg" alt="" />
+        <img src="img/matarani2.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/matarani2.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/matarani2.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/DurgaMaa.png" alt="" />
+        <img src="img/DurgaMaa.png" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/DurgaMaa.png" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/DurgaMaa.png" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/shinchan.jpg" alt="" />
+        <img src="img/shinchan.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/shinchan.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/shinchan.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/Untitled-1.jpg" alt="" />
+        <img src="img/Untitled-1.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/Untitled-1.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/Untitled-1.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/Untitled-2.jpg" alt="" />
+        <img src="img/Untitled-2.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/Untitled-2.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/Untitled-2.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/maa.jpg" alt="" />
+        <img src="img/maa.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/maa.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/maa.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
 
       <div class="gallery-item">
-        <img src="/img/avtar.jpg" alt="" />
+        <img src="img/avtar.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/avtar.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/avtar.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/Matarani.jpg" alt="" />
+        <img src="img/Matarani.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/Matarani.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/Matarani.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/THEHANUMANJI.jpg" alt="" />
+        <img src="img/THEHANUMANJI.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/THEHANUMANJI.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/THEHANUMANJI.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/bull.jpg" alt="" />
+        <img src="img/bull.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/bull.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/bull.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/tree-164915.jpg" alt="" />
+        <img src="img/tree-164915.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/tree-164915.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/tree-164915.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/SHIVV.jpg" alt="" />
+        <img src="img/SHIVV.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/SHIVV.jpg download><i class=" fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/SHIVV.jpg download><i class=" fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/vitiligoqueen.jpg" alt="" />
+        <img src="img/vitiligoqueen.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/vitiligoqueen.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/vitiligoqueen.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/hanumanjitextjaishriram.jpg" alt="" />
+        <img src="img/hanumanjitextjaishriram.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/hanumanjitextjaishriram.jpg" download><i class="fa-solid fa-download"></i></a>
+          <div class="icon"><a href="img/hanumanjitextjaishriram.jpg" download><i class="fa-solid fa-download"></i></a>
           </div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
 
       <div class="gallery-item">
-        <img src="/img/Untitl.jpg" alt="" />
+        <img src="img/Untitl.jpg" alt="" />
         <div class="imglink">
           <div class="icon"><a href=""><i class="fa-solid fa-share"></i></a></div>
           <div class="icon like"><a href=""><i class="fa-solid fa-heart"></i></a></div>
-          <div class="icon"><a href="/img/Untitl.jpg" download><i class="fa-solid fa-download"></i></a></div>
+          <div class="icon"><a href="img/Untitl.jpg" download><i class="fa-solid fa-download"></i></a></div>
           <div class="icon"><a href=""><i class="fa-solid fa-tag"></i></i></a></div>
         </div>
       </div>
